# rusty-chess-engine-rl

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: rust.yml
src/: board.rs  check.rs  errors.rs  lib.rs  moves.rs  piece.rs
src/board/: board.rs  board_info.rs  mod.rs
src/moves/: castle.rs  diag.rs  jump.rs  line.rs  mod.rs  pawn.rs  util.rs
src/notation/: algebraic.rs  fen.rs  mod.rs
