[tool.poetry]
name = "chess-engine-rl"
version = "0.1.0"
description = ""
authors = ["Jorge Ruiz <contact@jorgeruizdev.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "chess_engine_rl"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.262"
black = "^23.3.0"
maturin = "^0.14.17"
ipykernel = "^6.22.0"

[tool.maturin]
python-source = "engine"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
